--- a/dwh.cfg
+++ b/dwh.cfg
@@ -1,9 +1,9 @@
  [CLUSTER]
-HOST='redshift-cluster-1.cdzik8tgmyy8.us-west-2.redshift.amazonaws.com'
-DB_NAME='dev'
-DB_USER='awsuser'
-DB_PASSWORD='Qwerty12345'
-DB_PORT='5439'
+HOST='
+DB_NAME=''
+DB_USER=''
+DB_PASSWORD=''
+DB_PORT=''
 
 [IAM_ROLE]
 ARN=****
@@ -19,16 +19,16 @@ SECRET=****
 
 
 [DWH]
-DWH_CLUSTER_TYPE=multi-node
-DWH_NUM_NODES=4
-DWH_NODE_TYPE=dc2.large
-DWH_IAM_ROLE_NAME='myRedshiftRole'
-DWH_CLUSTER_IDENTIFIER='redshift-cluster-1'
-DWH_DB='dev'
-DWH_DB_USER='awsuser'
-DWH_DB_PASSWORD='Qwerty12345'
-DWH_PORT='5439'
-DWH_ENDPOINT ='******'
+DWH_CLUSTER_TYPE
+DWH_NUM_NODES=
+DWH_NODE_TYPE=
+DWH_IAM_ROLE_NAME=''
+DWH_CLUSTER_IDENTIFIER=''
+DWH_DB=''
+DWH_DB_USER=''
+DWH_DB_PASSWORD=''
+DWH_PORT=''
+DWH_ENDPOINT 
 
 
 
